--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>BB Gardens</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
-        <link rel="website icon" type="png" href="pictures/bbgardens_logo.png"> <!--Esta imagen es el logo que sale a un lado del nombre(title) de la web en el tab.-->
-    </head>
+        <link rel="website icon" type="png" href="pictures/bbgardens_logo.png">
     <body>
 
         <div id="structure"> 
@@ -21,7 +20,7 @@
 
             <nav id="nav_bar">    
                 <ul id="list">
-                    <li><p><a href="home.html">HOME</a></p></li>
+                    <li><p><a href="index.html">HOME</a></p></li>
                     <li><p><a href="about_us.html">ABOUT US</a></p></li>
                     <li><p><a href="services.html">SERVICE</a></p></li>
                     <li><p><a href="gallery.html">GALLERY</a></p></li>
