--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
     
                 <nav id="nav_bar">    
                     <ul id="list">
-                        <li><p><a href="home.html">HOME</a></p></li>
+                        <li><p><a href="index.html">HOME</a></p></li>
                         <li><p><a href="about_us.html">ABOUT US</a></p></li>
                         <li><p><a href="services.html">SERVICE</a></p></li>
                         <li><p><a href="gallery.html">GALLERY</a></p></li>
