--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>BB Gardens</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
         <link rel="website icon" type="png" href="pictures/bbgardens_logo.png">
+    </head>
     <body>
 
         <div id="structure"> 
