--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>BB Gardens</title>
         <link rel="stylesheet" type="text/css" href="styles.css"> 
-        <link rel="website icon" type="png" href="pictures/bbgardens_logo.png"> <!--Esta imagen es el logo que sale a un lado del nombre(title) de la web en el tab.-->
+        <link rel="website icon" type="png" href="pictures/bbgardens_logo.png"> 
     </head>
     <body>
 
