--- a/about_us.html
+++ b/about_us.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>BB Gardens</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
-        <link rel=" website icon" type= "png" href="pictures/bbgardens_logo.png"> <!--Esta imagen es el logo que sale a un lado del nombre(title) de la web en el tab.-->
+        <link rel=" website icon" type= "png" href="pictures/bbgardens_logo.png"> 
     </head>
     <body>
 
@@ -15,7 +15,7 @@
 
         <header id="home"class="header">
             
-            <img src="pictures/logo_bbgardens.JPG" alt="Company Logo">
+            <img src="pictures/logo_bbgardens.jpg" alt="Company Logo">
 
         </header>
 
