--- a/gallery.html
+++ b/gallery.html
@@ -40,7 +40,7 @@
                 <a href="pictures/sm_frente.JPEG" target="_blank"><img src="pictures/sm_frente.JPEG" alt="Garden"></a>
                 <a href="pictures/redondel.JPG" target="_blank"><img src="pictures/redondel.JPG" alt="Garden"></a>
                 <a href="pictures/sr_2.JPEG" target="_blank"><img src="pictures/sr_2.JPEG" alt="Garden"></a>
-                <a href="pictures/IMG_7280.JPEG" target="_blank"><img src="pictures/IMG_7280.JPEG" alt="Garden"></a>
+                <a href="pictures/wr_4.jpg" target="_blank"><img src="pictures/wr_4.jpg" alt="Garden"></a>
                 <a href="pictures/IMG_6804.JPEG" target="_blank"><img src="pictures/IMG_6804.JPEG" alt="Garden"></a>
                 <a href="pictures/og_5.JPEG" target="_blank"><img src="pictures/og_5.JPEG" alt="Jardin"></a>
                 <a href="pictures/sm_entrada.JPEG" target="_blank"><img src="pictures/sm_entrada.JPEG" alt="Garden"></a>
